--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jeffrey Li
-logo: /assets/images/headshot.png
+logo: /assets/img/headshot.png
 # description: text below image
 
 navbar-links:
