--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,6 @@
-title: Jeffrey Li
 logo: /assets/img/headshot.png
-# description: text below image
-
-navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+title: Jeffrey Li
+description: SCMP @ UPenn
 
 show_downloads: true
 theme: jekyll-theme-minimal
