--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Jeffrey Li
 logo: /assets/img/headshot.png
-description: SCMP @ UPenn
+# description: SCMP @ UPenn
 
 # show_downloads: true
 theme: jekyll-theme-minimal
